--- a/app/views/pages/adm.ejs
+++ b/app/views/pages/adm.ejs
@@ -6,8 +6,12 @@
   <link rel="stylesheet" href="/css/adm.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <title>Painel Administrativo</title>
+
+  <header>
   
-aaaaaaaaaaaaaaaaaaa
+  <%- include('../partials/menu') %>
+
+  </header>
 
 <!-- CONTEÚDO DA PÁGINA -->
 <main class="conteudo-principal">
@@ -240,15 +244,9 @@ aaaaaaaaaaaaaaaaaaa
 <!-- FOOTER  -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-<footer>
-    <section class="footer-container">
-        <p>&copy; Cloundmind 2025 - Todos os direitos reservados</p>
-        <section class="social-icons">
-            <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-        </section>
-    </section>
-</footer>
+  <footer>
+
+        <%- include('../partials/footer') %>
+
+  </footer>
 </html>
