--- a/app/views/pages/adm.ejs
+++ b/app/views/pages/adm.ejs
@@ -32,7 +32,7 @@
   <main>
     <!-- Seção de métricas -->
     <section aria-labelledby="metricas">
-      <h2 id="metricas">Resumo</h2>
+      <h2 id="metricas">Painel Administrativo</h2>
       <section class="cards">
         <article class="card">
           <h3>Usuários</h3>
