--- a/app/views/pages/SobreNos.ejs
+++ b/app/views/pages/SobreNos.ejs
@@ -56,7 +56,7 @@
         <ul>
             <li>
                 <figure>
-                    <img src="image/ana.png" alt="Foto de Ana Souza">
+                    <img src="image/ana.jpg" alt="Foto de Ana Souza">
                     <figcaption>
                         <strong class="cor">Ana Júlia Z.</strong><br>
                         Gerente<br> Banco de Dados<br>Documentadora<br>Analista de Sistema
@@ -65,7 +65,7 @@
             </li>
             <li>
                 <figure>
-                    <img src="image/rodrigo.png" alt="Foto de Lucas Almeida">
+                    <img src="image/rodrigo.jpg" alt="Foto de Lucas Almeida">
                     <figcaption>
                         <strong class="cor">Rodrigo C.</strong><br>
                         Desenvolvedor Front-End<br>Analista de Sistemas<br>
@@ -74,7 +74,7 @@
             </li>
             <li>
                 <figure>
-                    <img src="image/paulo.png" alt="Foto de Mariana Silva">
+                    <img src="image/paulo.jpg" alt="Foto de Mariana Silva">
                     <figcaption>
                         <strong class="cor">Paulo S.</strong><br>
                         Desenvolvedor Back-End<br>Analista de Sistemas
@@ -83,7 +83,7 @@
             </li>
             <li>
                 <figure>
-                    <img src="image/livia.png" alt="Foto de Pedro Santos">
+                    <img src="image/livia.jpg" alt="Foto de Pedro Santos">
                     <figcaption>
                         <strong class="cor">Livía S.</strong><br>
                         Designer
@@ -93,7 +93,7 @@
 
              <li>
                 <figure id="fogun">
-                    <img src="image/rafael.png" alt="Foto de Pedro Santos">
+                    <img src="image/rafael.jpg" alt="Foto de Pedro Santos">
                     <figcaption>
                         <strong class="cor">Rafael F.</strong><br>
                         Desenvolvedor Front-End
@@ -103,7 +103,7 @@
 
              <li>
                 <figure id="fogun">
-                    <img src="image/enrico.png" alt="Foto de Pedro Santos">
+                    <img src="image/enrico.jpg" alt="Foto de Pedro Santos">
                     <figcaption>
                         <strong class="cor">Enrico L.</strong><br>
                         Desenvolver Back-End
